cabal-version:      3.4
name:               arrow-sample
version:            0.1.0.0
synopsis:

homepage:           https://github.com/tana-gh/arrow-sample

license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0

executable arrow-sample
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        arrow-sample

test-suite arrow-sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0
